--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     window.$docsify = {
       name: '',
       repo: '',
-      loadSidebar: true,
+      loadSidebar: false,
       subMaxLevel: 2
     }
   </script>
